assets/css/style.css
:root {
  --primary: #9dbdc6;
  --secondary: #daeaef;
  --tertiary: #D90000;
  --light: #ffffff;
  --dark: #000000;

  /* relative to root el, not parent el, & font-size 1rem = 10px on default browser */
  --border-radius: 0.3rem;
  --spacing-one: calc(1rem * 0.25);
  --spacing-two: calc(1rem * 0.5);
  --spacing-three: 1rem;
  --spacing-four: calc(1rem * 1.5);
  --spacing-five: calc(1rem * 3);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  color: var(--dark);
  font-family: 'tk-itc-avant-garde-gothic-pro, futura-pt, Helvetica, Arial, sans-serif';
  font-weight: 300;
  font-style: normal;
  /* line-height: 1.5;
  font-size: 16px; */
}

h1,
h2,
h3,
h4 {
  font-weight: 500;
  color: var(--dark);
  line-height: 1.25;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  text-align: start;
}

h1 {
  font-size: 3.6 rem;
  font-weight: medium;
  /* margin: 0; */
  color: var(--light);
}

h2 {
  font-size: 7.5rem;
  font-family: "futura-pt-condensed",sans-serif;
  -webkit-font-feature-settings: "salt" 2;
  font-feature-settings: "salt" 2;
}

h3 {
  font-size: 3.5rem;
  font-family: "futura-pt",sans-serif;
  -webkit-font-feature-settings: "salt" 2;
  font-feature-settings: "salt" 2;
}

h4 {
  font-size: 2rem;
}

/* h5 {
  font-size: 1.25rem;
}

h6 {
  font-size: 1rem;
} */

p {
  font-size: 1.1rem;
  text-overflow: wrap;
}

ul {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  text-align: start;
  place-self: flex-start space-between;
}

a {
  text-decoration: none;
  color: var(--light);
}

/* HEADER / NAV BAR STYLES START */

header {
  position: sticky;
  position: -webkit-sticky;
  top: 0;
  background-image: url("../images/hero-bridge.jpg");
  background-size: cover;
  background-attachment: fixed;
  background-position: 80%;
  z-index: 9999;
}

/* header h1 {

} */

nav {
  /* margin: 7px 0; */
}

/* header nav ul {

} */

nav ul li a {
  padding: 10px 15px;
  font-weight: lighter;
  font-size: 1.55vw;
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}
nav a {
  /* font-weight: lighter;
  font-size: 2vw; */
}

header nav ul li a:hover {
  background: var(--primary-color);
  color: var(--secondary-color);
  border-radius: 15px;
  text-shadow: none;
}

/* HEADER / NAVBAR STYLES END */

/* HEADER TITLE (header a) */
.page-title {
  width: 100%;
  text-align: center;
  text-decoration: none;
  color: var(--light);
  font-size: 5.5rem;
  font-family: 'tk-itc-avant-garde-gothic-pro, sans-serif';
  font-weight: 500;
  font-style: normal;
}

/* FOOTER STYLES START */
footer {
  background: var(--light);
  /* padding: 40px 35px; */
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 100%;
}

/* footer h2 {
  margin: 0;
} */

/* footer div {
  line-height: 1.5;
  text-align: right;
} */

/* footer a {
  color: var(--secondary-color);
} */
/* END FOOTER STYLES */

/* STYLE ALL SECTION TAGS */
section {
  margin: 0 auto;
}

/* HERO STYLES START */
.hero {
  /* max-width: 1200px;
  min-width: 100%; */
  background-image: url("../images/hero-bridge.jpg");
  background-size: cover;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  align-items: flex-start;
  background-attachment: fixed;
  background-position: 80%;
}

.hero-cta {
  width: 35%;
  text-align: right;
  /* margin: 3.5%; */
  color: #fff;
  line-height: 1.2;
}

.hero-cta h2 {
  font-style: oblique;
  color: var(--light);
}

/* .hero img {
  height: 100vw;
  max-width: 1200px;
} */

/* .form-input {
  border: 1px solid var(--secondary-color);
  display: block;
  padding: 7px 15px;
  font-size: 16px;
  color: var(--secondary-color);
  width: 100%;
  margin-bottom: 15px;
  border-radius: 10px;
  background-color: rgba(255,255,255, 0.75);
}

.form-input:focus {
  background-color: rgba(255,255,255, 1);
  outline: none;
} */
/* HERO STYLES END */

/* SECTION TITLE STYLES START */
.section-title {
  display: flex;
  width: fit-content;
  height: auto;
  flex-wrap: wrap;
  flex-direction: column;
  color: var(--dark);
  text-orientation: upright;
  writing-mode: vertical-lr;
  margin-left: auto;
  place-self: flex-end;
}

.section-subtitle {
  font-size: 48px;
  border-bottom: 3px solid;
  color: var(--secondary-color);
  padding-bottom: 20px;
  text-align: center;
  margin: 0 auto 35px auto;
  width: 50%;
}

.primary-border {
  border-color: var(--dark);
  border-left: 0.5rem solid;
}

.secondary-border {
  border-color: var(--tertiary-color);
}
/* SECTION TITLE STYLES END */

/* ABOUT */

.about-me {
  display: flex;
  flex-wrap: wrap;
  background: var(--light);
  color: var(--dark);
  justify-content: space-around;
}

.about-container {
  position: relative;
  width: fit-content;
  display: flex;
  flex-wrap: wrap;
  place-content: center space-between;
  padding-left: var(--spacing-five);
  padding-right: var(--spacing-five);
}

.about-content {
  position: relative;
  top: 0;
  vertical-align: top;
  display: flex;
  width: fit-content;
  height: fit-content;
  flex-wrap: wrap;
  color: var(--dark);
  place-content: flex-start space-between;
  padding-left: var(--spacing-one);
  padding-right: var(--spacing-one);
  text-align: start;
}

.about-content h3,
h4,
ul,
p,
a {
  color: var(--dark);
  line-height: 1.25;
  display: flex;
  width: 100%;
  flex: 0 0 calc(100% * 5 / 12 - 0.5%);
  flex-direction: column;
  flex-wrap: wrap;
  text-align: start;
}

.about-content ul {
  width: fit-content;
  flex: 0 0 calc(100% * 5 / 12 - 0.5%);
  place-self: flex-start space-between;
  text-align: start;
}

.image-container {
  place-content: start space-between;
  position: relative;
  vertical-align: top;
  display: flex;
  flex: 1 0 calc(100% * 5 / 12 - 0.5%);
  width: fit-content;
  height: auto;
  flex-wrap: wrap;
  flex-direction: column;
}
/* ... */

